# Bridge

./: .gitignore  index.html  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.css  App.tsx  AuthContext.tsx  realtimeService.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  token.txt
src-tauri/capabilities/: default.json
src-tauri/plugins/: VideoRecorder.swift  record_video.swift
src-tauri/src/: candle.rs  chains.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: AnimatedBackground.tsx  AnimatedGradientBackGround.tsx  LoadingSpinner.tsx  MealPlanView.tsx  MealSuggestion.tsx  Navbar.tsx  PageWrapper.tsx  ProtectedRoute.tsx  RecipeView.tsx  TestLLM.tsx
src/components/NutritionForm/: ActionButtons.tsx  FormSchema.tsx  IntakeResults.tsx  MacroDescriptions.tsx  MacroInfoCard.tsx  NutritionProfile.tsx  Step1.tsx  Step2.tsx  Step3.tsx
src/hooks/: useMealPlan.ts  useScrollReset.ts
src/lib/: supabaseClient.ts  utils.ts
src/pages/: Home.tsx  Login.tsx  Mobility.tsx  Nutrition.tsx  Settings.tsx  SplashScreen.tsx
src/types/: nutrition.ts
src/utils/: storage.ts
tauri-plugin-record-video/: Cargo.toml  README.md
tauri-plugin-record-video/examples/tauri-app/: package.json
tauri-plugin-record-video/guest-js/: index.ts
tauri-plugin-record-video/permissions/autogenerated/: reference.md
tauri-plugin-record-video/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
tauri-plugin-recordVideo/: Cargo.toml  README.md  package.json
tauri-plugin-recordVideo/examples/tauri-app/src/: App.svelte
tauri-plugin-recordVideo/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-recordVideo/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-recordVideo/guest-js/: index.ts
tauri-plugin-recordVideo/ios/: Package.swift  README.md
tauri-plugin-recordVideo/ios/Sources/: VideoRecorderPlugin.swift
tauri-plugin-recordVideo/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+1 files in other folders)
