[package]
name = "tru-fit-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tru_fit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }


[dependencies]
tauri = { version = "2.0.0-rc.16", features = [] }
tauri-plugin-shell = "2.0.0-rc.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
tauri-plugin-fs = "2"
tokenizers = "0.20"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
dotenv = "0.15.0"
langchain-rust = { git = "https://github.com/Abraxas-365/langchain-rust.git" }

# candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.7.1" }
# candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.1" }

# [target.'cfg(all(target_os = "linux", not(any(target_arch = "arm", target_arch = "aarch64"))))'.dependencies]
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1" }

# [target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "android", all(target_os = "linux", any(target_arch = "arm", target_arch = "aarch64"))))'.dependencies]
# candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1" }
