[package]
name = "record-video"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-record-video"

[dependencies]
tauri = { version = "2.0.2" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }

[features]
default = ["mobile"]
desktop = []
mobile = []
